--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </footer>
 
     </div>
-    <script src="../script/main.js"></script>
+    <script src="script/main.js"></script>
 </body>
 
 </html>
