--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!--link de biblioteca w3school, para inserir as 3 barrinhas-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<!--link de biblioteca w3school, para inserir as 3 barrinhas-->
     <link rel="stylesheet" href="CSS/index.css">
     <!--lincando css-->
     <title>Free Fire</title>
@@ -51,27 +53,32 @@
             </ul>
         </nav>
         <!--conteúdo-->
-        <div class="box1">
-            <!--dando nome para a class -->
-            <h1>CHAME A SUA TROPA </h1>
-        </div>
-
-        <div class="box2">
-            <!--dando nome para a class -->
-            <img src="../img/2personagem2.png" height="100%" width="100%" alt="Foto Personagens">
-        </div>
-        <div class="box3">
-            <h1>LUTE PARA VIVER!</h1>
-        </div>
-        <div class="box4">
-            <img src="../img/4luta.png" height="100%" width="100%" alt="">
-        </div>
-        <div class="box5">
-            <h1>SUA BATALHA SEU ESTILO!</h1>
-        </div>
-        <div class="box6">
-            <img src="../img/5suabatalha.png" height="100%" width="100%" alt="">
-        </div>
+        <div id="carouselExampleIndicators" class="carousel slide">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="..." class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="..." class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="..." class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
 
         
         <footer>
